--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,11 @@
 {% block content %}
 <h1>Wombat - Login</h1>
 <p>{% trans 'Please provide login and password information to access your mail-account.' %}</p>
-{% if error_message %}
-<p class="errornote">{{ error_message }}</p>
+
+{% if err_msg %}
+  <p class="errornote">{{ err_msg }}</p>
 {% endif %}
+
 <div class="form-login">
 <form action="{{ app_path }}" method="post" id="login-form">
   <div class="form-row">
