--- a/media/css/style.css
+++ b/media/css/style.css
@@ -22,13 +22,34 @@ a:hover {color: #f17912;}
 #content {padding: 1em 2em;}
 #footer {padding: 1em 0; font-size: 0.9em; text-align: center; clear: both;}
 
-.form-login {
-  width: 250px;
-  border: 1px solid #959596;
-  background-color: #efeeee;
+/*
+ * Login
+ */
+h2.title {
+  display: block;
+  margin-left: 2em;
+  padding: 2px 10px;
+  background-color: #e0ffb7;
+  border-radius: 5px; /* CSS 3 */
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
 
+#sidebar {
+  float: right;
+  height: 300px;
+  width: 250px;
+  border-left: 1px solid #d1d5d8;
+  background-color: #eef2f5;
+}
+
+#login-form {top: 60px; position: relative;}
 label {display: block; padding: 3px 10px 0 10px; float: left; width: 70px;}
+input[type=password], input[type=text] {width: 140px;}
+
+/*
+ * Mails
+ */
 
 /* top & right must be the equal to header's padding. */
 #options {position: absolute; top: .5em; right: 1em;}
@@ -43,15 +64,8 @@ label {display: block; padding: 3px 10px 0 10px; float: left; width: 70px;}
   border-radius: 10px; /* CSS 3 */
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
+  background-color: #e0ffb7;
 }
 
 ul.submenu {}
 ul.submenu li {display: inline;}
-
-/*
- * Settings panel
- */
-#settings {color: #000; background-color: #f17912;}
-
-#settings a {color: #fff;}
-#settings a:hover {color: #000;}
