--- a/templates/base.html
+++ b/templates/base.html
@@ -10,19 +10,16 @@
 
 <body>
   <div id="container">
-    <div id="header">
-    {% block header %}
-    {% endblock %}
-    </div> <!-- #header -->
+    {% block header %}{% endblock %}
     <div id="content">
       {% block content %}
       {% endblock %}
     </div> <!-- #header -->
-    <div id="footer">
     {% block footer %}
+    <div id="footer">
       <p>&copy;2009 Wombat Mail - <a>License</a> - <a>Website</a></p>
-    {% endblock %}
     </div> <!-- #footer -->
+    {% endblock %}
   </div> <!-- #container -->
 </body>
 </html>
