First working IMAP implementation.
 * The backend is here but needs some love on the frontend side.
 * Models have been slightly rewritten to ease the account configuration
 * There is a mock imaplib object for unit testing
 * Attempt to decouple the different logics in different apps

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <div id="content">
       {% block content %}
       {% endblock %}
-    </div> <!-- #header -->
+    </div> <!-- #content -->
     {% block footer %}
     <div id="footer">
       <p>&copy;2009 Wombat Mail - <a>License</a> - <a>Website</a></p>
