--- a/templates/compose.html
+++ b/templates/compose.html
@@ -7,7 +7,7 @@
 {% block panel %}
 <div class="panel">
   <div class="form">
-  <form action="{{ app_path }}" method="post">
+	<form action="{% url compose %}" method="post">
     <p>
       <label>&nbsp;</label><input type="submit" value="{% trans 'Send' %}" />
       <label>&nbsp;</label><input type="submit" value="{% trans 'Save' %}" />
