Updated the login form to work with @login_required

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,6 +19,9 @@
       <label>&nbsp;</label>
       <input type="submit" value="{% trans 'Log in' %}" />
     </p>
+    {% if next %}
+      <input type="hidden" name="next" value="{{ next }}" />
+    {% endif %}
   </form>
   </div>
 </div>
