Added some views taking advantage of the IMAP implementation:
 * List directories and messages -- with unit tests and caching
 * custom cache key generator
 * @account required decorator that asks the user to setup an account first
 * test_settings with coverage reports and gorun support
 * caching the total & unread counts for every dirextory in the IMAP tree
 * every method that connects to the IMAP server accepts a ``connection``
   keyword-argument, in case we need to do several different calls in a view

--- a/templates/users/add_account.html
+++ b/templates/users/add_account.html
@@ -5,18 +5,19 @@
 
 {% block form %}
 <div class="form">
-<form action="{% url add_account %}" method="post">
-	{% if submitted and success %}
-	<p>{% trans 'Your account has been successfully created' %}</p>
-	{% endif %}
-	{% if submitted and not success %}
-	<p>{% trans 'An error has been encountered while checking your credentials. Please double check and try again' %}</p>
-	{% endif %}
-	<h2>IMAP settings</h2>
-	{{ imap.as_p }}
-	<h2>SMTP settings</h2>
-	{{ smtp.as_p }}
-	<p><label>&nbsp;</label><input type="submit" value="{% trans 'Save Changes' %}" /></p>
-</form>
+  <form action="{% url add_account %}" method="post">
+    <h1>Add an account</h1>
+    {% if submitted and success %}
+    <p>{% trans 'Your account has been successfully created' %}</p>
+    {% endif %}
+    {% if submitted and not success %}
+    <p>{% trans 'An error has been encountered while checking your credentials. Please double check and try again' %}</p>
+    {% endif %}
+    <h2>IMAP settings</h2>
+    {{ imap.as_p }}
+    <h2>SMTP settings</h2>
+    {{ smtp.as_p }}
+    <p><label>&nbsp;</label><input type="submit" value="{% trans 'Save Changes' %}" /></p>
+  </form>
 </div>
 {% endblock %}
