Fixed compose and settings panels.

--- a/templates/base_settings.html
+++ b/templates/base_settings.html
@@ -3,8 +3,8 @@
 
 {% block title %}Wombat | {% trans 'Settings' %}{% endblock %}
 
-{% block panel %}
-<div id="settings" class="panel">
+{% block mail %}
+<div id="settings">
   <ul class="submenu">
     <li><a href="{% url settings %}">General</a></li>
     <li><a href="{% url accounts %}">Accounts</a></li>
