--- a/templates/mail.html
+++ b/templates/mail.html
@@ -43,7 +43,7 @@
 {% endblock %}
 </div>
 
-<h1>Inbox</h1>
+<h1><a href="{% url inbox %}">Inbox</a></h1>
 
 {% if err_msg %}
   <p class="errornote">{{ err_msg }}</p>
