--- a/media/css/style.css
+++ b/media/css/style.css
@@ -17,6 +17,9 @@ img {border: 0;}
 a {color: #06c; text-decoration: none;}
 a:hover {color: #f17912;}
 
+h1 a { color: inherit; }
+h1 a:hover { color: inherit; }
+
 #container {margin: 0; padding: 0;}
 #header {padding: .5em 1em; border-bottom: 1px solid #959596;}
 #content {padding: 1em 2em;}
