--- a/templates/message.html
+++ b/templates/message.html
@@ -3,7 +3,7 @@
 {% block mail %}
 <p><a href="{% url directory directory.name %}">back to <b>{{ directory.name }}</b></a></p>
 <div class="message">
-  <p>{{ message.0|linebreaks }}</p>
+  <p>{{ message.body|linebreaks }}</p>
 </div>
 <p><a href="{% url directory directory.name %}">back to <b>{{ directory.name }}</b></a></p>
 {% endblock %}
