Add the posibility to edit/delete accounts.
Create a new view to edit account based on the one used to
add a new account. Use correctly Django's model forms save()
function with commit=false to avoid creating various smtp/imap
configs. Backport this change to the add_account method.

--- a/templates/users/accounts.html
+++ b/templates/users/accounts.html
@@ -6,8 +6,11 @@
 {% block form %}
 	<div class="form">
 		<ul>
-			{% for account in accounts %}
-			<li>{{ accounts }}</li>
+            {% for a in accounts %}
+            <li>{{ a }}
+                <a href="{% url edit_account a.id %}">edit</a>
+                <a href="{% url del_account a.id %}">delete</a>
+            </li>
 			{% empty %}
 			<li>You don't have any account yet</li>
 			{% endfor %}
