--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     </div> <!-- #content -->
     {% block footer %}
     <div id="footer">
-      <p>&copy;2009 Wombat Mail - <a>License</a> - <a>Website</a></p>
+      <p>&copy;2010 Wombat Mail - <a>License</a> - <a>About</a></p>
     </div> <!-- #footer -->
     {% endblock %}
   </div> <!-- #container -->
