--- a/templates/mail.html
+++ b/templates/mail.html
@@ -30,9 +30,9 @@
     <li{% if not m.read %} class="new"{% endif %}>
       <a href="{% url message directory.id m.uid %}">
         <input type="checkbox" name="m_{{ m.uid }}">
-				<span class="from">
-					{% if m.from.0 %}{{ m.from.0 }}{% else %}{{ m.from.1 }}{% endif %}
-				</span>
+        <span class="from">
+          {% if m.from.0 %}{{ m.from.0 }}{% else %}{{ m.from.1 }}{% endif %}
+        </span>
         {% if m.subject %}{{ m.subject }}{% else %}{% trans 'No subject' %}{% endif %}
       <span class="date">{{ m.date|hour_or_date }}</span>
       </a
@@ -54,11 +54,15 @@
 <a href="{% url compose %}">Compose</a>
 {% endif %}
 <h2><a href="{% url inbox account.id %}">{{ account.name }}</a></h2>
-<ul id="menu">
+<ul class="menu">
+  {% for dir in account.special_directories %}
+  {% include 'directory.html' %}
+  {% endfor %}
+</ul>
+
+<ul class="menu">
   {% for dir in account.imap_directories %}
-	{% if not dir.no_select %}
-	<li><a href="{% url directory dir.id %}">{{ dir.name }}</a></li>
-	{% endif %}
+  {% include 'directory.html' %}
   {% endfor %}
 </ul>
 {% endfor %}
