--- a/templates/mail.html
+++ b/templates/mail.html
@@ -28,15 +28,16 @@
     <li class="select">Select: <a>All, None, Read, Unread, Starred, Unstarred</a></li>
     {% for m in messages %}
     <li{% if not m.read %} class="new"{% endif %}>
+      <input type="checkbox" name="m_{{ m.uid }}">
       <a href="{% url message directory.id m.uid %}">
-        <input type="checkbox" name="m_{{ m.uid }}">
         <span class="from">
           {% if m.from.0 %}{{ m.from.0 }}{% else %}{{ m.from.1 }}{% endif %}
         </span>
         {% if m.subject %}{{ m.subject }}{% else %}{% trans 'No subject' %}{% endif %}
-      <span class="date">{{ m.date|hour_or_date }}</span>
-      </a
-    ></li>
+        <span class="date">{{ m.date|hour_or_date }}</span>
+        {% if m.attachment %}<img class="attachment" src="{{ MEDIA_URL}}img/attach.png"/>{% endif %}
+      </a>
+    </li>
     {% empty %}
     <li>{% trans 'Hooray, no message here' %}!</li>
     {% endfor %}
