--- a/media/css/style.css
+++ b/media/css/style.css
@@ -64,6 +64,12 @@ ul#messages li {
 #messages .from {font-weight: bold; color: black;}
 #messages .date {}
 
+ul#messages li {background-color: #f0f0f0; position: relative;}
+ul#messages li.new {background-color: #fff;}
+ul#messages li .from { display: inline-block; width: 200px;}
+ul#messages li .date { float: right; padding: 5px 3px 0 0; }
+ul#messages li .attachment { float: right; padding: 3px 2px 0 0; }
+
 ul#messages li.select {
   background-color: #e0ffb7;
   border: 0;
