--- a/media/css/style.css
+++ b/media/css/style.css
@@ -13,6 +13,7 @@ body {
 html, body, #container {padding: 0; margin: 0; height: 100%;}
 
 img {border: 0;}
+ul {padding: 0; list-style-type: none;}
 
 a {color: #06c; text-decoration: none;}
 a:hover {color: #f17912;}
@@ -54,7 +55,7 @@ input[type=password], input[type=text] {width: 140px;}
  * Mails
  */
 
-ul#messages {padding: 0 1em; list-style-type: none;}
+ul#messages {padding: 0 1em;}
 
 #messages li {background: #f0f0f0; clear: both; border-top: 1px solid #d1d5d8;}
 #messages li.new {background: #fff;}
