--- a/templates/mail.html
+++ b/templates/mail.html
@@ -23,7 +23,7 @@
 
 {% block content %}
 <div class="panel">
-{% block mail %}
+{% block panel %}
   Select: <a>All, None, Read, Unread, Starred, Unstarred</a>
   <ul id="messages">
     {% for m in messages %}
