--- a/templates/message.html
+++ b/templates/message.html
@@ -1,6 +1,6 @@
 {% extends "mail.html" %}
 
-{% block mail %}
+{% block panel %}
 <p><a href="{% url directory directory.id %}">back to <b>{{ directory }}</b></a></p>
 <div class="message">
   <p>{{ message.body|linebreaks }}</p>
