--- a/templates/compose.html
+++ b/templates/compose.html
@@ -4,7 +4,7 @@
 {% block title %}Wombat | {% trans 'Compose' %}{% endblock %}
 
 
-{% block mail %}
+{% block panel %}
   <div class="form">
 	<form action="{% url compose %}" method="post">
     <p>
