Add a new field 'email' to Accounts.
The email field is used when sending emails. In the future, it should
be possible to select a default account (and email). This addresse
will be the one visible at the top of the page. For the moment just
show the first one.
Also add the posibility to edit name & email in account configuration.

--- a/templates/mail.html
+++ b/templates/mail.html
@@ -14,7 +14,7 @@
   </div>
 
   <span id="options">
-    <b>{{ user.email }}</b> |
+    <b>{{ user.get_profile.emails|first }}</b> |
     <a href="{% url settings %}">Settings</a> |
     <a href="{% url logout %}">Log out</a></p>
   </span>
