Do IMAP selects as readonly when writting is not necessary.
 * Fixes a bug when trying to list the content of readonly folders.
 * Fixes a bug when trying to display an unexisting "from" field.

--- a/templates/mail.html
+++ b/templates/mail.html
@@ -33,7 +33,7 @@
     <li{% if not m.read %} class="new"{% endif %}>
       <input type="checkbox" name="m_{{ m.uid }}" />
       <a href="{% url message directory.mailbox.account.slug directory.id m.uid %}">
-        <span class="from">{{ m.from.0|default:m.from.1 }}</span>
+          {% if m.from %}<span class="from">{{ m.from.0|default:m.from.1 }}</span>{% endif %}
         {{ m.subject|default:"No subject" }}
         <span class="date">{{ m.date|hour_or_date }}</span>
         {% if m.attachment %}<img class="attachment" src="{{ MEDIA_URL }}img/attach.png" alt="paperclip"/>{% endif %}
